# Beekeeper

./: .gitignore  README.md  meson.build  xyz.trollcall.Beekeeper.json
.flatpak-builder/cache/refs/heads/x86_64-xyz.trollcall.Beekeeper.json/: init
.flatpak-builder/checksums/: x86_64-xyz.trollcall.Beekeeper.json
data/: meson.build  xyz.trollcall.Beekeeper.appdata.xml.in  xyz.trollcall.Beekeeper.desktop.in  xyz.trollcall.Beekeeper.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: folders.js  main.js  meson.build  style.css  window.js  window.ui  xyz.trollcall.Beekeeper.data.gresource.xml  xyz.trollcall.Beekeeper.src.gresource.xml
src/gtk/: modal.ui
